k8s/overlays/coreso/ftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreso-ftp
spec:
  ports:
    - protocol: TCP
      port: 21
      targetPort: 21
