k8s/overlays/coreso/gridcapa-ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/custom-request-headers: userId:johnDoe
    app: gridcapa
    component: gridcapa
  name: gridcapa-minio
  namespace: default
spec:
  rules:
    - host: gridcapa.ingress-gridcapa.rh.1648.local
      http:
        paths:
          - backend:
              service:
                name: gridcapa-minio
                port:
                  number: 9000
            path: /minio
            pathType: Prefix
