k8s/overlays/coreso/gridcapa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/custom-request-headers: userId:johnDoe
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  labels:
    app: gridcapa
    component: gridcapa
  name: gridcapa
  namespace: default
spec:
  rules:
    - host: gridcapa.ingress-gridcapa.rh.1648.local
      http:
        paths:
          - backend:
              service:
                name: cse-import-idcc-gridcapa-app
                port:
                  number: 80
            path: /cse/import/idcc/
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /cse/import/idcc/config/
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /cse/import/idcc/config-notification/
            pathType: Prefix
          - backend:
              service:
                name: cse-import-idcc-task-manager
                port:
                  number: 80
            path: /cse/import/idcc/task-notification/
            pathType: Prefix
          - backend:
              service:
                name: cse-import-idcc-task-manager
                port:
                  number: 80
            path: /cse/import/idcc/task-manager/
            pathType: Prefix
          - backend:
              service:
                name: cse-import-idcc-gridcapa-job-launcher
                port:
                  number: 80
            path: /cse/import/idcc/gridcapa-job-launcher/
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-gridcapa-app
                port:
                  number: 80
            path: /cse/import/d2cc/
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /cse/import/d2cc/config/
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /cse/import/d2cc/config-notification/
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-task-manager
                port:
                  number: 80
            path: /cse/import/d2cc/task-notification/
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-task-manager
                port:
                  number: 80
            path: /cse/import/d2cc/task-manager/
            pathType: Prefix
          - backend:
              service:
                name: cse-import-d2cc-gridcapa-job-launcher
                port:
                  number: 80
            path: /cse/import/d2cc/gridcapa-job-launcher/
            pathType: Prefix

          - backend:
              service:
                name: cse-export-idcc-gridcapa-app
                port:
                  number: 80
            path: /cse/export/idcc/
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /cse/export/idcc/config/
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /cse/export/idcc/config-notification/
            pathType: Prefix
          - backend:
              service:
                name: cse-export-idcc-task-manager
                port:
                  number: 80
            path: /cse/export/idcc/task-notification/
            pathType: Prefix
          - backend:
              service:
                name: cse-export-idcc-task-manager
                port:
                  number: 80
            path: /cse/export/idcc/task-manager/
            pathType: Prefix
          - backend:
              service:
                name: cse-export-idcc-gridcapa-job-launcher
                port:
                  number: 80
            path: /cse/export/idcc/gridcapa-job-launcher/
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-gridcapa-app
                port:
                  number: 80
            path: /cse/export/d2cc/
            pathType: Prefix
          - backend:
              service:
                name: config-server
                port:
                  number: 80
            path: /cse/export/d2cc/config/
            pathType: Prefix
          - backend:
              service:
                name: config-notification-server
                port:
                  number: 80
            path: /cse/export/d2cc/config-notification/
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-task-manager
                port:
                  number: 80
            path: /cse/export/d2cc/task-notification/
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-task-manager
                port:
                  number: 80
            path: /cse/export/d2cc/task-manager/
            pathType: Prefix
          - backend:
              service:
                name: cse-export-d2cc-gridcapa-job-launcher
                port:
                  number: 80
            path: /cse/export/d2cc/gridcapa-job-launcher/
            pathType: Prefix
          - backend:
              service:
                name: gridcapa-rabbitmq
                port:
                  number: 15672
            path: /utils/rabbitmq/
            pathType: Prefix
          - backend:
              service:
                name: apps-metadata-server
                port:
                  number: 80
            path: /apps-metadata/
            pathType: Prefix
